<resources>
    <string name="app_name">Registra.se</string>
    <string name="login_button">Entrar</string>
    <string name="register_button">Criar Conta</string>
    <string name="back_button">Voltar</string>
    <string name="return_button">Return to Last Screen button</string>
    <string name="username_label">Nome de usuário:</string>
    <string name="username_placeholder">Seu nome</string>
    <string name="email_label">E-mail:</string>
    <string name="email_placeholder">email@registra.com</string>
    <string name="password_label">Senha:</string>
    <string name="password_placeholder">********</string>
    <string name="create_sale_button">Cadastrar venda</string>
    <string name="buyer_label">Nome do comprador:</string>
    <string name="buyer_placeholder">Matheus</string>
    <string name="sale_value">100,00</string>
    <string name="paid_value">120,00</string>
    <string name="paid_value_label">Valor pago:</string>
    <string name="currency_placeholder">20,00</string>
    <string name="currency_label">Troco:</string>
    <string name="sale_value_label">Valor da compra:</string>
    <string name="sale_desc_placeholder">Descrição da venda...</string>
    <string name="sale_desc_label">Descrição da venda</string>
    <string name="cpf_placeholder">123.456.789-01</string>
    <string name="cpf_label">CPF do comprador:</string>
    <string name="del_sale_button">Deletar venda</string>
    <string name="update_sale_button">Atualizar venda</string>
    <string name="sale_currency">Troco:</string>
    <string name="sale_paidvalue">Valor pago:</string>
    <string name="sale_buy_value">Valor:</string>
    <string name="sale_description">Descrição:</string>
    <string name="sale_cpf">CPF:</string>
    <string name="sale_buyerName">Nome:</string>
    <string name="sale_id">ID:</string>
    <string name="exit_button">Sair da conta</string>
    <string name="config_warn">Configurações disponíveis apenas para o Administrador</string>
    <string name="delete_sale_button">Deletar venda</string>
    <string name="managa_users_button">Gerenciar Usuários</string>
    <string name="delete_user_button">Deletar Usuário</string>
</resources>