<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.UserRegister"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/return_button"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck,ImageContrastCheck" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buyer_label"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/buyer"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:hint="@string/buyer_placeholder"
        android:textColorHint="@color/primaryColorDark"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpf_label"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/cpf"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:hint="@string/cpf_placeholder"
        android:inputType="number"
        android:padding="10dp"
        android:textColorHint="@color/primaryColorDark"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sale_desc_label"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/sale_desc"
        android:inputType="textLongMessage"
        android:autofillHints="password"
        android:hint="@string/sale_desc_placeholder"
        android:textColorHint="@color/primaryColorDark"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sale_value_label"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/sale_value"
        android:inputType="numberDecimal"
        android:autofillHints=""
        android:hint="@string/sale_value"
        android:textColorHint="@color/primaryColorDark"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paid_value_label"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/paid_value"
        android:inputType="numberDecimal"
        android:autofillHints=""
        android:hint="@string/paid_value"
        android:textColorHint="@color/primaryColorDark"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_label"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/currency"
        android:inputType="numberDecimal"
        android:autofillHints=""
        android:hint="@string/currency_placeholder"
        android:textColorHint="@color/primaryColorDark"
        android:padding="10dp"/>

    <Button
        android:id="@+id/create_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryColor"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/register_button"
        android:textColor="@android:color/black"
        android:textSize="21sp"
        app:cornerRadius="24dp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkGray"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/back_button"
        android:textSize="21sp"
        app:cornerRadius="24dp" />
</LinearLayout>