<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.UserRegister"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/return_button"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck,ImageContrastCheck" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textSize="16sp"
        android:layout_marginTop="64dp"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/username"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:hint="@string/username_placeholder"
        android:textColorHint="@color/primaryColorDark"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textSize="16sp"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/primaryColorDark"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textSize="16sp"
        android:layout_marginTop="32dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/password_placeholder"
        android:textColorHint="@color/primaryColorDark"
        android:padding="10dp"/>

    <Button
        android:id="@+id/create_user_button"
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryColor"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/register_button"
        android:textColor="@android:color/black"
        android:textSize="21sp"
        app:cornerRadius="24dp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/darkGray"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/back_button"
        android:textSize="21sp"
        app:cornerRadius="24dp" />
</LinearLayout>