<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".activities.UserRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/return_button"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck,ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/sale_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sale_id"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryColorDark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/sale_buyerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sale_buyerName"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buyerName_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryColorDark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/sale_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sale_cpf"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cpfValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryColorDark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/sale_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sale_description"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryColorDark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/sale_buyValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sale_buy_value"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buyValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryColorDark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/sale_paidValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sale_paidvalue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paidValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryColorDark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/sale_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sale_currency"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currency_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryColorDark"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/delete_sale_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:visibility="gone"
        android:text="@string/delete_sale_button"
        android:textSize="21sp"
        app:cornerRadius="24dp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkGray"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/back_button"
        android:textSize="21sp"
        app:cornerRadius="24dp" />
</LinearLayout>